--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/winston": "^2.4.4",
     "openai": "^4.16.1",
     "winston": "^3.11.0"
   }
