--- a/config/config.sample.json
+++ b/config/config.sample.json
@@ -1,5 +1,5 @@
 {
-    "log_file_path": "",
+    "log_folder_path": "",
     "chat_gpt_model": "gpt-4-0125-preview",
     "user_language": "En",
     "use_framework": true,
